# continuous_tracking

./: CMakeLists.txt  README.md  package.xml  vnc.Dockerfile
.github/workflows/: basic-build-ci.yaml  dependencies.repos  publish-docker-image.yaml
cfg/: ContinuousTracker.cfg  ContinuousTracking.cfg
include/continuous_tracking/: dataset.h
launch/: continuous_tracker.launch  continuous_tracking.launch
rviz/: continuous_tracker.rviz  continuous_tracking.rviz
scripts/: clone_repositories_and_install_dependencies.sh
src/: continuous_tracker_node.cpp  continuous_tracking_node.cpp
