<?xml version="1.0"?>
<package format="2">
    <name>continuous_tracking</name>
    <version>0.0.0</version>
    <description>ROS specific extensions to object_tracking library</description>
    <maintainer email="andreas.reich@unibw.de">anre</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_ros</depend>
    <depend>object_instance_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>message_filters</depend>
    <depend>image_geometry</depend>

    <exec_depend>rviz_object_instance</exec_depend>
    <exec_depend>compressed_image_transport</exec_depend>

    <export>
    </export>
</package>
